# mystring

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cc  mystring.hpp  pow_two.hpp
include/: mystring.hpp
test/: CMakeLists.txt  main.cc
